# image-edit-auto

./: .gitignore  README.md  pyproject.toml
config/: image.jobs.sample.json  jobs.sample.json  video.jobs.sample.json
src/: ImageEditAuto.py  VideoEditAuto.py  __init__.py
