[tool.poetry]
name = "image-edit-auto"
version = "0.2.0"
description = ""
authors = ["mdvtkr <mdvtkr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry_bumpversion.file."src/__init__.py"]